--- a/.github/workflows/update-cask.yml
+++ b/.github/workflows/update-cask.yml
@@ -13,6 +13,9 @@ on:
   repository_dispatch:
     types: [update-cask]
 
+permissions:
+  contents: write
+
 jobs:
   update:
     runs-on: macos-latest
